# diamond-zoned

./: .gitignore  README.md  pyproject.toml  requirements.txt
diamond_zoned/: __init__.py  __main__.py  certifier.py  cli.py  config.py  exceptions.py  models.py  ollama_client.py  prompts.py  questionnaire.py
tests/: test_certifier_parse.py  test_questionnaire.py
